minor z-index change to make sure that the menu stays on top of everything.

--- a/Styles/Sass/_menu.scss
+++ b/Styles/Sass/_menu.scss
@@ -20,7 +20,8 @@ input[type=checkbox] {
 
 nav {
     position: fixed;
-    z-index: 1;
+    z-index: 16;
+    box-shadow: 3px 3px 3px $blackColor;
 }
 
 #menuToggle {
