--- a/Styles/Sass/styles.css
+++ b/Styles/Sass/styles.css
@@ -715,7 +715,9 @@ input[type=checkbox] {
 
 nav {
   position: fixed;
-  z-index: 1;
+  z-index: 16;
+  -webkit-box-shadow: 3px 3px 3px #171717;
+          box-shadow: 3px 3px 3px #171717;
 }
 
 #menuToggle {
